# zedyolo

./: .gitignore  README.md
catkin_ws/devel/include/object_detection/: Predictions.h
catkin_ws/devel/include/ros_dnn_msgs/: DetectAction.h  DetectActionGoal.h  DetectActionResult.h  Prediction.h
catkin_ws/devel/lib/cyborg_zed/: cyborg_zed
catkin_ws/devel/lib/pkgconfig/: cyborg_zed.pc  object_detection.pc  ros_dnn.pc  ros_dnn_msgs.pc
catkin_ws/devel/lib/ros_dnn/: object_detector_node
catkin_ws/devel/lib/zed_wrapper/: zed_wrapper_node
catkin_ws/devel/share/cyborg_zed/cmake/: cyborg_zedConfig.cmake
catkin_ws/devel/share/object_detection/cmake/: object_detection-msg-paths.cmake  (+1 more)
catkin_ws/install/: _setup_util.py
catkin_ws/install/include/object_detection/: Prediction.h
catkin_ws/install/include/ros_dnn/: ObjectDetectorConfig.h
catkin_ws/install/include/ros_dnn_msgs/: DetectActionFeedback.h  DetectFeedback.h  DetectGoal.h  DetectResult.h  Predictions.h
catkin_ws/install/lib/cyborg_zed/: cyborg_zed
catkin_ws/install/lib/pkgconfig/: cyborg_zed.pc  ros_dnn.pc  ros_dnn_msgs.pc
catkin_ws/install/lib/ros_dnn/: object_detector_node
catkin_ws/install/lib/zed_wrapper/: zed_wrapper_node
catkin_ws/install/share/cyborg_zed/: package.xml
catkin_ws/install/share/cyborg_zed/cmake/: cyborg_zedConfig.cmake
catkin_ws/install/share/cyborg_zed/launch/: cyborg_zed.launch
catkin_ws/src/object_detection/: CMakeLists.txt  package.xml
catkin_ws/src/object_detection/src/: Makefile  example.py  predictions.avi  zedyolo.py  zedyolo_draw.py
pyyolo/: test.py
(+69 files in other folders)
