<?xml version="1.0"?>
<package>
  <name>cyborg_zed</name>
  <version>0.0.1</version>
  <description>Node for the ros_dnn and zed_wrapper nodelets</description>
<maintainer email="morten.mjelva@gmail.com">Morten Mjelva</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nodelet</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>zed_wrapper</run_depend>
  <run_depend>ros_dnn</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>nodelet</run_depend>
</package>
